Criação dos arquivos de estilo

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="imagex/png" href="/img/icone.ico">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="shortcut icon" type="imagex/png" href="assets/fonts/icone.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>OptimusTech</title>
 </head>
 <body>
     <header class="menu">
         <div class="menu__img">
-            <img src="/img/worldwide 1 (Traced).svg" alt="Logo do site">
+            <img src="assets/img/worldwide.svg" alt="Logo do site">
         </div>
         <h1 class="menu__logo">OptimusTech</h1>
         <nav class="menu__nav">
