Estilização da fonte, organização dos itens do navbar

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="shortcut icon" type="imagex/png" href="assets/fonts/icone.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>OptimusTech</title>
 </head>
 <body>
     <header class="menu">
-        <div class="menu__img">
-            <img src="assets/img/worldwide.svg" alt="Logo do site">
-        </div>
-        <h1 class="menu__logo">OptimusTech</h1>
+        <div class="menu__logo">
+            <div class="menu__img">
+                <img src="assets/img/worldwide.svg" alt="Logo do site">
+            </div>
+            <h1 class="menu__titulo">OptimusTech</h1>
+            </div>
         <nav class="menu__nav">
             <ul class="menu__lista">
                 <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
@@ -24,7 +29,7 @@
             </ul>
         </nav>
         <div class="menu__login">
-            <a class="menu__entrar" href="#"></a>
+            <a class="menu__entrar" href="#">Entrar</a>
             <button class="menu__cadastro">Cadastrar</button>
         </div>
     </header>
