Estlização do botão

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <div class="menu__login">
             <a class="menu__entrar" href="#">Entrar</a>
-            <button class="menu__cadastro">Cadastrar</button>
+            <button class="menu__btn">Cadastrar</button>
         </div>
     </header>
     <section class="cabecalho">
