--- a/index.html
+++ b/index.html
@@ -34,10 +34,31 @@
         </div>
     </header>
     <section class="cabecalho">
-
+        <span class="cabecalho__categoria">Sobre nós</span>
+        <h2 class="cabecalho__titulo">Porque somos diferentes?</h2>
+        <p class="cabecalho__texto">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
     </section>
     <section class="metricas">
-
+        <div class="metricas__dados">
+            <span class="metricas__numero">400+</span>
+            <h3 class="metricas__titulo">Projetos concluídos</h3>
+            <p class="metricas__texto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+        </div>
+        <div class="metricas__dados">
+            <span class="metricas__numero">100+</span>
+            <h3 class="metricas__titulo">Colaboradores</h3>
+            <p class="metricas__texto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+        </div>
+        <div class="metricas__dados">
+            <span class="metricas__numero">20k</span>
+            <h3 class="metricas__titulo">Downloads</h3>
+            <p class="metricas__texto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+        <div class="metricas__dados">
+            <span class="metricas__numero">500+</span>
+            <h3 class="metricas__titulo">Reviews 5 estrelas</h3>
+            <p class="metricas__texto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+        </div>
     </section>
     <section class="vagas">
 
