Inserção de novas categorias, textos, imagem e estilização

--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
         </div>
     </section>
     <section class="vagas">
-
+        <span class="vagas__anuncio">Vagas abertas!</span>
+        <h2 class="vagas__titulo">Estamos procurando por taletos</h2>
+        <p class="vagas__texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+        <figure class="vagas__imagem">
+            <img src="assets/img/Image.png" alt="Pessoas em reunião, sorrindo e com seus notebooks">
+        </figure>
     </section>
     <section class="depoimentos">
 
