--- a/index.html
+++ b/index.html
@@ -67,12 +67,63 @@
         <figure class="vagas__imagem">
             <img src="assets/img/Image.png" alt="Pessoas em reunião, sorrindo e com seus notebooks">
         </figure>
+        <div>
+            <h3>Design</h3>
+            <div>
+                <h4>Product Designer</h4>
+                <div>
+                    <span>Full Time</span>
+                    <span>Faixa salarial: R$7.000</span>
+                </div>
+            </div>
+            <div>
+                <h4>UX Designer</h4>
+                <div>
+                    <span>Full Time</span>
+                    <span>Faixa salarial: R$6.000</span>
+                </div>
+            </div>
+            <h3>Desenvolvimento de Software</h3>
+            <div>
+                <h4>Desenvolvedor(a) iOS</h4>
+                <div>
+                    <span>Full Time</span>
+                    <span>Faixa salarial: R$8.000</span>
+                </div>
+            </div>
+            <div>
+                <h4>Desenvolvedor(a) Front-end</h4>
+                <div>
+                    <span>Full Time</span>
+                    <span>Faixa salarial: R$7.000</span>
+                </div>
+            </div>
+            <div>
+                <h4>Desenvolvedor(a) Back-end</h4>
+                <div>
+                    <span>Full Time</span>
+                    <span>Faixa salarial: R$8.000</span>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="depoimentos">
-
+        <span>Veja o que nossos colaboradores falam sobre nós</span>
+        <p>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+        <div>
+            <img src="assets/img/Avatar.png" alt="">
+        </div>
+        <span>Júlia Castro</span>
+        <span>Desenvolvedora Web</span>
     </section>
     <footer class="formulario">
-
+        <h2>Acompanhe as nossas oportunidades</h2>
+        <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <div>
+            <input type="text" placeholder="Seu e-mail">
+            <button>Cadastrar</button>
+        </div>
+        <span>© 2022 OptimusTech. Todos os direitos reservados.</span>
     </footer>
 </body>
 </html>
