--- a/index.html
+++ b/index.html
@@ -67,63 +67,63 @@
         <figure class="vagas__imagem">
             <img src="assets/img/Image.png" alt="Pessoas em reunião, sorrindo e com seus notebooks">
         </figure>
-        <div>
-            <h3>Design</h3>
-            <div>
-                <h4>Product Designer</h4>
-                <div>
-                    <span>Full Time</span>
-                    <span>Faixa salarial: R$7.000</span>
+        <div class="vagas__classificados">
+            <h3 class="vagas__area">Design</h3>
+            <div class="vagas__dados">
+                <h4 class="vagas__cargo">Product Designer</h4>
+                <div class="vagas__oferta">
+                    <span class="vagas__periodo">Full Time</span>
+                    <span class="vagas__salario">Faixa salarial: R$7.000</span>
                 </div>
             </div>
-            <div>
-                <h4>UX Designer</h4>
-                <div>
-                    <span>Full Time</span>
-                    <span>Faixa salarial: R$6.000</span>
+            <div class="vagas__dados">
+                <h4 class="vagas__cargo">UX Designer</h4>
+                <div class="vagas__oferta">
+                    <span class="vagas__periodo">Full Time</span>
+                    <span class="vagas__salario">Faixa salarial: R$6.000</span>
                 </div>
             </div>
-            <h3>Desenvolvimento de Software</h3>
-            <div>
-                <h4>Desenvolvedor(a) iOS</h4>
-                <div>
-                    <span>Full Time</span>
-                    <span>Faixa salarial: R$8.000</span>
+            <h3 class="vagas__area">Desenvolvimento de Software</h3>
+            <div class="vagas__dados">
+                <h4 class="vagas__cargo">Desenvolvedor(a) iOS</h4>
+                <div class="vagas__oferta">
+                    <span class="vagas__periodo">Full Time</span>
+                    <span class="vagas__salario">Faixa salarial: R$8.000</span>
                 </div>
             </div>
-            <div>
-                <h4>Desenvolvedor(a) Front-end</h4>
-                <div>
-                    <span>Full Time</span>
-                    <span>Faixa salarial: R$7.000</span>
+            <div class="vagas__dados">
+                <h4 class="vagas__cargo">Desenvolvedor(a) Front-end</h4>
+                <div class="vagas__oferta">
+                    <span class="vagas__periodo">Full Time</span>
+                    <span class="vagas__salario">Faixa salarial: R$7.000</span>
                 </div>
             </div>
-            <div>
-                <h4>Desenvolvedor(a) Back-end</h4>
-                <div>
-                    <span>Full Time</span>
-                    <span>Faixa salarial: R$8.000</span>
+            <div class="vagas__dados">
+                <h4 class="vagas__cargo">Desenvolvedor(a) Back-end</h4>
+                <div class="vagas__oferta">
+                    <span class="vagas__periodo">Full Time</span>
+                    <span class="vagas__salario">Faixa salarial: R$8.000</span>
                 </div>
             </div>
         </div>
     </section>
     <section class="depoimentos">
-        <span>Veja o que nossos colaboradores falam sobre nós</span>
-        <p>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
-        <div>
+        <span class="depoimentos__titulo">Veja o que nossos colaboradores falam sobre nós</span>
+        <p class="depoimentos__relato">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+        <div class="depoimentos__img">
             <img src="assets/img/Avatar.png" alt="">
         </div>
-        <span>Júlia Castro</span>
-        <span>Desenvolvedora Web</span>
+        <span class="depoimentos__nome">Júlia Castro</span>
+        <span class="depoimentos__cargo">Desenvolvedora Web</span>
     </section>
     <footer class="formulario">
-        <h2>Acompanhe as nossas oportunidades</h2>
-        <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <h2 class="formulario__titulo">Acompanhe as nossas oportunidades</h2>
+        <p class="formulario__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
         <div>
-            <input type="text" placeholder="Seu e-mail">
-            <button>Cadastrar</button>
+            <input type="text" placeholder="Seu e-mail" class="formulario__email">
+            <button class="formulario__btn">Cadastrar</button>
         </div>
-        <span>© 2022 OptimusTech. Todos os direitos reservados.</span>
+        <span class="formulario__dr">© 2022 OptimusTech. Todos os direitos reservados.</span>
     </footer>
 </body>
 </html>
