estilização de textos e inputs

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
     <section class="vagas">
         <span class="vagas__anuncio">Vagas abertas!</span>
-        <h2 class="vagas__titulo">Estamos procurando por taletos</h2>
+        <h2 class="vagas__titulo">Estamos procurando por talentos</h2>
         <p class="vagas__texto">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
         <figure class="vagas__imagem">
             <img src="assets/img/Image.png" alt="Pessoas em reunião, sorrindo e com seus notebooks">
@@ -121,7 +121,7 @@
         <p class="formulario__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
         <div>
             <input type="text" placeholder="Seu e-mail" class="formulario__email">
-            <button class="formulario__btn">Cadastrar</button>
+            <button class="menu__btn">Cadastrar</button>
         </div>
         <span class="formulario__dr">© 2022 OptimusTech. Todos os direitos reservados.</span>
     </footer>
