--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     <footer class="formulario">
         <h2 class="formulario__titulo">Acompanhe as nossas oportunidades</h2>
         <p class="formulario__texto">Seja o primeiro a saber quando novas vagas serão abertas!</p>
-        <div>
+        <div class="formulario__cadastro">
             <input type="text" placeholder="Seu e-mail" class="formulario__email">
-            <button class="menu__btn">Cadastrar</button>
+            <button class="formulario__btn">Cadastrar</button>
         </div>
         <span class="formulario__dr">© 2022 OptimusTech. Todos os direitos reservados.</span>
     </footer>
